# noteking-pro

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  LICENSE  README.md  REFERENCES.md  docker-compose.gpu.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run_demo.py  run_demo_pdf.py
api/: main.py
api/models/: schemas.py
api/routes/: config.py  recording.py  video.py
assets/: notes-template.tex
cli/: __main__.py
core/: __init__.py  batch.py  cache.py  config.py  diarizer.py  downloader.py  formatter.py  frames.py  llm.py  parser.py  pdf_engine.py  preprocessor.py  proxy.py  subtitle.py  transcriber.py
core/templates/: __init__.py  base.py  brainstorm.py  brief.py  cornell_notes.py  custom.py  detailed.py  entertainment.py  exam.py  exam_prep.py  flashcard.py  interview_template.py  latex_pdf.py  lecture_notes.py  meeting_minutes.py  mindmap.py  news.py  news_digest.py  podcast.py  podcast_shownotes.py  quiz.py  smart_summary.py  timeline.py  tutorial.py  xhs_note.py
demos/: run_minimind.py
demos/minimind/notes/: p01_开篇.md  p02_前言.md  p03_必看_前言补充.md  p04_前置知识.md  p05_架构图解读.md  p06_初始化项目.md  p07_理论_RMSNorm.md  p08_代码_RMSNorm.md  p09_理论_RoPE&YaRN.md  p10_代码_RoPE&YaRN.md  p11_理论_GQA.md  p12_代码_GQA 上.md  p13_代码_GQA 下.md  p14_理论_FFN.md  p15_代码_FFN.md  p16_拼接_Block.md  p17_组装_Model.md  p18_封装_CausalLM.md  p19_回顾与知识检验.md  p20_必看_纠错补充.md  p21_重制Dataset_理论.md  p22_重制Dataset_代码.md  p23_重制Pretrain_理论.md  p24_重制Pretrain_代码.md  p25_训练，启动！.md  p26_Eval_完结！.md
demos/minimind/templates_demo/: brief.md  custom.md  detailed.md  exam.md  flashcard.md  mindmap.md  news.md  podcast.md  quiz.md  timeline.md  tutorial.md  xhs_note.md
demos/openclaw_meeting/: README.md  meeting.srt  transcript.json  会议纪要.md  图文讲义.md  学习闪卡.md  思维导图.md  核心金句与观点.md  简报摘要.md
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: beginner-guide-cn.md  beginner-guide-en.md  beginner-guide.md  deploy-aliyun.md  deploy-docker.md  deploy-guide.md  deploy-tencent.md  deploy-vercel.md  openclaw-install.md  youtube-proxy.md
mcp/: package.json
mcp/src/: index.ts
skill/: SKILL.md
web/: package.json  tailwind.config.js
web/src/app/: globals.css  layout.tsx  page.tsx
